Bug 461549 - Traceable print and shapeOf functions for js shell. r=mrbkap.